<resources>
    <string name="app_name">Deaf talks</string>
    <string name="deaf_talks">Deaf Talks</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="here_s_nyour_first_nstep_with_nus">Here’s\nyour first\nstep with \nus!</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="name">Name</string>
    <string name="user_id">User ID</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="add_interceptor">Add interpreter</string>
    <string name="add">Add</string>
    <string name="upload_your_picture">Upload Your Picture</string>
    <string name="hint_name">Name</string>
    <string name="profiles">Profiles</string>
    <string name="logout">Logout</string>
    <string-array name="expertise">
        <item>Beginner</item>
        <item>Advance</item>
        <item>Fluent</item>
    </string-array>
    <string-array name="ethnicities">
        <item>African</item>
        <item>Asian</item>
        <item>European</item>
        <item>Hispanic</item>
        <item>Middle Eastern</item>
        <item>Native American</item>
        <item>Pacific Islander</item>
    </string-array>
</resources>