<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/blue_shade4"
    android:fillViewport="true">


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/blue_shade4"
    tools:context=".ui.activities.ui.addInterceptor.AddInterceptorFragment">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/profileImg"
        android:src="@drawable/ic_deaf_bg"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/subParentCL"
        app:layout_constraintEnd_toEndOf="@id/subParentCL"
        app:layout_constraintBottom_toTopOf="@id/subParentCL"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="@id/subParentCL"
        app:layout_constraintEnd_toEndOf="@id/subParentCL"
        app:layout_constraintBottom_toTopOf="@id/subParentCL"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="0"
            android:src="@drawable/ic_profile_blue"/>

        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_weight="0"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_arrow_up"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:id="@+id/uploadImgIV"
            android:text="@string/upload_your_picture"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:layout_marginStart="1dp"
            android:gravity="center"/>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/subParentCL"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:background="@drawable/bg_rounded_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue_shade4"
            android:elevation="20dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.553" />

        <EditText
            android:id="@+id/nameET"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:hint="@string/hint_name"
            android:textColorHint="@color/blue_shade3_alpha"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/monthlyRateET"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="20dp"
            android:hint="Monthly Rate $"
            android:inputType="number"
            android:textColorHint="@color/blue_shade3_alpha"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hourlyRateET" />


        <EditText
            android:id="@+id/ageET"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:hint="Age"
            android:inputType="number"
            android:layout_marginEnd="30dp"
            android:textColorHint="@color/blue_shade3_alpha"
            app:layout_constraintBottom_toBottomOf="@+id/hourlyRateET"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/hourlyRateET" />


        <TextView
            android:id="@+id/ethnicityTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:text="Your Ethnicity"
            android:textColor="@color/blue_shade4"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ageET"/>

        <Spinner
            android:id="@+id/ethnicity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ethnicityTV"
            android:entries="@array/ethnicities" />

        <EditText
            android:id="@+id/yearlyRateET"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="20dp"
            android:hint="Yearly Rate $"
            android:inputType="number"
            android:textColorHint="@color/blue_shade3_alpha"
            app:layout_constraintBottom_toTopOf="@id/addBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/monthlyRateET"
            app:layout_constraintVertical_bias="0" />

        <EditText
            android:id="@+id/hourlyRateET"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="20dp"
            android:hint="Hourly Rate $"
            android:inputType="number"
            android:textColorHint="@color/blue_shade3_alpha"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/descriptionLY" />

        <Spinner
            android:id="@+id/nameSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:entries="@array/expertise"
            app:layout_constraintStart_toStartOf="@+id/expertiseLevelTV"
            app:layout_constraintTop_toBottomOf="@id/expertiseLevelTV" />

        <TextView
            android:id="@+id/expertiseLevelTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:text="Select Your Expertise Level"
            android:textColor="@color/blue_shade4"
            app:layout_constraintBottom_toBottomOf="@+id/nameET"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/nameET" />

        <LinearLayout
            android:id="@+id/descriptionLY"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/blue_border_rounded_cornwe"
            app:layout_constraintTop_toBottomOf="@id/nameET"
            tools:layout_editor_absoluteX="30dp">

            <EditText
                android:id="@+id/descriptionET"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:background="@color/transparent"
                android:ellipsize="end"
                android:gravity="start"
                android:hint="Describe yourself"
                android:maxLines="5"
                android:textColorHint="@color/blue_shade3_alpha" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/addBtn"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_rounded_blue"
            android:gravity="center"
            android:text="@string/add"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>